pkgs/dartcv_core/src/core.h

CvStatus *Mat_Release(Mat *m);
int Mat_Rows(Mat m);
CvStatus *Mat_Row(Mat m, int y, Mat *rval);
CvStatus *Mat_Region(Mat m, Rect r, Mat *rval);
CvStatus *Mat_Reshape(Mat m, int cn, int rows, Mat *rval);
CvStatus *Mat_ReshapeByVec(Mat m, int cn, VecI32 newshape, Mat *rval);
uchar *Mat_Ptr_u8_1(Mat m, int i);
uchar *Mat_Ptr_u8_2(Mat m, int i, int j);
uchar *Mat_Ptr_u8_3(Mat m, int i, int j, int k);
CvStatus *Mat_SetSChar(Mat m, int row, int col, int8_t val);
CvStatus *Mat_SetSChar3(Mat m, int x, int y, int z, int8_t val);
CvStatus *Mat_SetShort(Mat m, int row, int col, int16_t val);
CvStatus *Mat_SetInt(Mat m, int row, int col, int32_t val);
CvStatus *Mat_SetInt3(Mat m, int x, int y, int z, int32_t val);
CvStatus *Mat_SetFloat(Mat m, int row, int col, float val);
CvStatus *Mat_SetFloat3(Mat m, int x, int y, int z, float val);
CvStatus *Mat_SetDouble(Mat m, int row, int col, double val);
CvStatus *Mat_SetDouble3(Mat m, int x, int y, int z, double val);
CvStatus *Mat_Reduce(Mat src, Mat dst, int dim, int rType, int dType);
CvStatus *Mat_ReduceArgMax(Mat src, Mat dst, int axis, bool lastIndex);
CvStatus *Mat_ReduceArgMin(Mat src, Mat dst, int axis, bool lastIndex);
CvStatus *Mat_Repeat(Mat src, int nY, int nX, Mat dst);
CvStatus *Mat_ScaleAdd(Mat src1, double alpha, Mat src2, Mat dst);
CvStatus *Mat_SetIdentity(Mat src, double scalar);