pkgs/dartcv_core/src/core_async.h

CvStatus *Mat_Region_Async(Mat self, Rect r, CvCallback_1 callback);
CvStatus *Mat_Reshape_Async(Mat self, int cn, int rows, CvCallback_1 callback);