pkgs/dartcv_core/lib/src/g/core.g.dart


  late final _Mat_Ptr_u8_1Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<imp1.uchar> Function(Mat, ffi.Int)>>(
      'Mat_Ptr_u8_1');
  late final _Mat_Ptr_u8_1 =
      _Mat_Ptr_u8_1Ptr.asFunction<ffi.Pointer<imp1.uchar> Function(Mat, int)>();

  ffi.Pointer<imp1.uchar> Mat_Ptr_u8_2(
    Mat m,
    int i,
    int j,
  ) {
    return _Mat_Ptr_u8_2(
      m,
      i,
      j,
    );
  }

  late final _Mat_Ptr_u8_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<imp1.uchar> Function(
              Mat, ffi.Int, ffi.Int)>>('Mat_Ptr_u8_2');
  late final _Mat_Ptr_u8_2 = _Mat_Ptr_u8_2Ptr.asFunction<
      ffi.Pointer<imp1.uchar> Function(Mat, int, int)>();

  ffi.Pointer<imp1.uchar> Mat_Ptr_u8_3(
    Mat m,
    int i,
    int j,
    int k,
  ) {
    return _Mat_Ptr_u8_3(
      m,
      i,
      j,
      k,
    );
  }

  late final _Mat_Ptr_u8_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<imp1.uchar> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int)>>('Mat_Ptr_u8_3');
  late final _Mat_Ptr_u8_3 = _Mat_Ptr_u8_3Ptr.asFunction<
      ffi.Pointer<imp1.uchar> Function(Mat, int, int, int)>();

  ffi.Pointer<CvStatus> Mat_Reduce(
    Mat src,
    Mat dst,
    int dim,
    int rType,
    int dType,
  ) {
    return _Mat_Reduce(
      src,
      dst,
      dim,
      rType,
      dType,
    );
  }

  late final _Mat_ReducePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Int, ffi.Int)>>('Mat_Reduce');
  late final _Mat_Reduce = _Mat_ReducePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, int, int)>();

  ffi.Pointer<CvStatus> Mat_ReduceArgMax(
    Mat src,
    Mat dst,
    int axis,
    bool lastIndex,
  ) {
    return _Mat_ReduceArgMax(
      src,
      dst,
      axis,
      lastIndex,
    );
  }

  late final _Mat_ReduceArgMaxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Bool)>>('Mat_ReduceArgMax');
  late final _Mat_ReduceArgMax = _Mat_ReduceArgMaxPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, bool)>();

  ffi.Pointer<CvStatus> Mat_ReduceArgMin(
    Mat src,
    Mat dst,
    int axis,
    bool lastIndex,
  ) {
    return _Mat_ReduceArgMin(
      src,
      dst,
      axis,
      lastIndex,
    );
  }

  late final _Mat_ReduceArgMinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Bool)>>('Mat_ReduceArgMin');
  late final _Mat_ReduceArgMin = _Mat_ReduceArgMinPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, bool)>();

  ffi.Pointer<CvStatus> Mat_Region(
    Mat m,
    Rect r,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_Region(
      m,
      r,
      rval,
    );
  }

  late final _Mat_RegionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Rect, ffi.Pointer<Mat>)>>('Mat_Region');
  late final _Mat_Region = _Mat_RegionPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Rect, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_Region_Async(
    Mat self,
    Rect r,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_Region_Async(
      self,
      r,
      callback,
    );
  }

  late final _Mat_Region_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Rect, imp1.CvCallback_1)>>('Mat_Region_Async');
  late final _Mat_Region_Async = _Mat_Region_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Rect, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_Release(
    ffi.Pointer<Mat> m,
  ) {
    return _Mat_Release(
      m,
    );
  }

  late final _Mat_ReleasePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>>(
      'Mat_Release');
  late final _Mat_Release = _Mat_ReleasePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_Repeat(
    Mat src,
    int nY,
    int nX,
    Mat dst,
  ) {
    return _Mat_Repeat(
      src,
      nY,
      nX,
      dst,
    );
  }

  late final _Mat_RepeatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, Mat)>>('Mat_Repeat');
  late final _Mat_Repeat = _Mat_RepeatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, Mat)>();

  ffi.Pointer<CvStatus> Mat_Reshape(
    Mat m,
    int cn,
    int rows,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_Reshape(
      m,
      cn,
      rows,
      rval,
    );
  }

  late final _Mat_ReshapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>>('Mat_Reshape');
  late final _Mat_Reshape = _Mat_ReshapePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_ReshapeByVec(
    Mat m,
    int cn,
    VecI32 newshape,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_ReshapeByVec(
      m,
      cn,
      newshape,
      rval,
    );
  }

  late final _Mat_ReshapeByVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, VecI32, ffi.Pointer<Mat>)>>('Mat_ReshapeByVec');
  late final _Mat_ReshapeByVec = _Mat_ReshapeByVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, VecI32, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_Reshape_Async(
    Mat self,
    int cn,
    int rows,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_Reshape_Async(
      self,
      cn,
      rows,
      callback,
    );
  }

  late final _Mat_Reshape_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, imp1.CvCallback_1)>>('Mat_Reshape_Async');
  late final _Mat_Reshape_Async = _Mat_Reshape_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_Row(
    Mat m,
    int y,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_Row(
      m,
      y,
      rval,
    );
  }

  late final _Mat_RowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Pointer<Mat>)>>('Mat_Row');
  late final _Mat_Row = _Mat_RowPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, ffi.Pointer<Mat>)>();

  int Mat_Rows(
    Mat m,
  ) {
    return _Mat_Rows(
      m,
    );
  }

  late final _Mat_RowsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_Rows');
  late final _Mat_Rows =
      _Mat_RowsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_ScaleAdd(
    Mat src1,
    double alpha,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_ScaleAdd(
      src1,
      alpha,
      src2,
      dst,
    );
  }

  late final _Mat_ScaleAddPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Double, Mat, Mat)>>('Mat_ScaleAdd');
  late final _Mat_ScaleAdd = _Mat_ScaleAddPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_SetDouble(
    Mat m,
    int row,
    int col,
    double val,
  ) {
    return _Mat_SetDouble(
      m,
      row,
      col,
      val,
    );
  }

  late final _Mat_SetDoublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Double)>>('Mat_SetDouble');
  late final _Mat_SetDouble = _Mat_SetDoublePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, double)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetDouble3(
    Mat m,
    int x,
    int y,
    int z,
    double val,
  ) {
    return _Mat_SetDouble3(
      m,
      x,
      y,
      z,
      val,
    );
  }

  late final _Mat_SetDouble3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Double)>>('Mat_SetDouble3');
  late final _Mat_SetDouble3 = _Mat_SetDouble3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int, double)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetFloat(
    Mat m,
    int row,
    int col,
    double val,
  ) {
    return _Mat_SetFloat(
      m,
      row,
      col,
      val,
    );
  }

  late final _Mat_SetFloatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Float)>>('Mat_SetFloat');
  late final _Mat_SetFloat = _Mat_SetFloatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, double)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetFloat3(
    Mat m,
    int x,
    int y,
    int z,
    double val,
  ) {
    return _Mat_SetFloat3(
      m,
      x,
      y,
      z,
      val,
    );
  }

  late final _Mat_SetFloat3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Float)>>('Mat_SetFloat3');
  late final _Mat_SetFloat3 = _Mat_SetFloat3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int, double)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetIdentity(
    Mat src,
    double scalar,
  ) {
    return _Mat_SetIdentity(
      src,
      scalar,
    );
  }

  late final _Mat_SetIdentityPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Double)>>(
      'Mat_SetIdentity');
  late final _Mat_SetIdentity = _Mat_SetIdentityPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetInt(
    Mat m,
    int row,
    int col,
    int val,
  ) {
    return _Mat_SetInt(
      m,
      row,
      col,
      val,
    );
  }

  late final _Mat_SetIntPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int32)>>('Mat_SetInt');
  late final _Mat_SetInt = _Mat_SetIntPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetInt3(
    Mat m,
    int x,
    int y,
    int z,
    int val,
  ) {
    return _Mat_SetInt3(
      m,
      x,
      y,
      z,
      val,
    );
  }

  late final _Mat_SetInt3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int32)>>('Mat_SetInt3');
  late final _Mat_SetInt3 = _Mat_SetInt3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int, int)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetSChar(
    Mat m,
    int row,
    int col,
    int val,
  ) {
    return _Mat_SetSChar(
      m,
      row,
      col,
      val,
    );
  }

  late final _Mat_SetSCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int8)>>('Mat_SetSChar');
  late final _Mat_SetSChar = _Mat_SetSCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetSChar3(
    Mat m,
    int x,
    int y,
    int z,
    int val,
  ) {
    return _Mat_SetSChar3(
      m,
      x,
      y,
      z,
      val,
    );
  }

  late final _Mat_SetSChar3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Int8)>>('Mat_SetSChar3');
  late final _Mat_SetSChar3 = _Mat_SetSChar3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int, int)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_SetShort(
    Mat m,
    int row,
    int col,
    int val,
  ) {
    return _Mat_SetShort(
      m,
      row,
      col,
      val,
    );
  }
